pkl-core/src/test/files/LanguageSnippetTests/input/errors/cannotAssignFixedProperty2.pkl
amends "../basic/fixedProperty1.pkl"

res1 = "bye"
